RESOLVED FIXED144507
[OS X] Text dilation parameters are not restored after being set
https://bugs.webkit.org/show_bug.cgi?id=144507
Summary [OS X] Text dilation parameters are not restored after being set
Myles C. Maxfield
Reported 2015-05-01 15:53:47 PDT
[OS X] Text dilation parameters are not restored after being set
Attachments
Patch (8.34 KB, patch)
2015-05-01 15:57 PDT, Myles C. Maxfield
simon.fraser: review+
Myles C. Maxfield
Comment 1 2015-05-01 15:57:18 PDT
Myles C. Maxfield
Comment 2 2015-05-01 15:57:55 PDT
Simon Fraser (smfr)
Comment 3 2015-05-01 16:04:36 PDT
Comment on attachment 252183 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=252183&action=review We should really clean up all the saving/restoring that FontCascade::drawGlyphs() does. > Source/WebCore/ChangeLog:5 > + This needs a radar too.
Myles C. Maxfield
Comment 4 2015-05-01 16:26:56 PDT
Note You need to log in before you can comment on or make changes to this bug.